# HELLO_SDL

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.linux.yml  docker-compose.wsl.yml  docker-compose.yml  main.c  run.sh
HELLO_SDL/: CMakeLists.txt  CMakePresets.json  main.c
tst/: myfile.c
tst/aaa/: myfile2.h
